# agentic

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  DDD.md  FEATURE.md  ISSUES.md  MANIFEST.in  MODULE.md  Makefile  PLAN.md  PLANNING.md  PLAN_STEP_01.md  PLAN_STEP_02.md  PLAN_STEP_03.md  PLAN_STEP_04.md  PLAN_STEP_TEMPLATE.md  README.md  REFACTORING.md  TESTS.md  arch-config.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: auto-pr.yml  ci.yml  release.yml
arch/: run_tests.py
arch/extractors/: php_extractor.php  python_extractor.py  typescript_extractor.js
docs/: architecture-mapping.md  index.md
docs/architecture/: mapping.md
docs/humans/: architecture-mapping.md  rules-feature-acceptance-implementation-tree.md
docs/maintainers/: packaged-resources.md  releasing.md  rule-system.md  validation-scope.md
docs/project/: getting-started.md  overview.md
docs/runtime/: architecture-check.md  workspace-contract.md
rules/: PLANNING.md  PLAN_STEP_TEMPLATE.md  example-rule.md
src/agentic/: __init__.py  __main__.py  cli.py  cli_support.py  project_layout.py
src/agentic/features/: __init__.py
src/agentic/features/architecture/: __init__.py  cli.py
src/agentic/features/architecture/check/: __init__.py
src/agentic/features/architecture/hotspots/: __init__.py
src/agentic/features/architecture/map/: __init__.py
src/agentic/features/architecture/summary/: __init__.py
src/agentic/features/architecture_check/: README.md  TACTICAL.md  __init__.py  cli.py  contracts.py  ports.py
src/agentic/features/architecture_check/adapters/: __init__.py  subprocess_runtime.py
src/agentic/features/architecture_check/app/: __init__.py  run_architecture_check.py
src/agentic/features/architecture_check/application/: __init__.py
src/agentic/features/architecture_check/checker/: __init__.py
src/agentic/features/architecture_check/dependency_map/: __init__.py
src/agentic/features/architecture_check/domain/: __init__.py  evaluation.py  extractor_contract.py  patterns.py
src/agentic/features/configuration/: __init__.py  cli.py  contracts.py  ports.py
src/agentic/features/llm_handoff/: __init__.py  cli.py
src/agentic/features/workspace/: cli.py
src/agentic/features/workspace_contract/: PLAN.md  PLAN_STEP_01.md  PLAN_STEP_02.md  PLAN_STEP_03.md  PLAN_STEP_04.md  TACTICAL.md  __init__.py  cli.py  contracts.py  ports.py
src/agentic/resources/: README.md  TACTICAL.md  agentic.yaml
src/agentic/resources/guide/: COMMANDS.md  WORKFLOW.md
src/agentic/resources/reference/: ARCHITECTURE_MAP.md
src/agentic/resources/rules/: AGENT.md  FEATURE.md  FEATURE_LAYOUT.md  INDEX.md  MODULE.md  PLANNING.md  PLAN_STEP_TEMPLATE.md  REFACTORING.md  TESTS.md
src/agentic/resources/rules_refactor/: TARGET_RULE_TREE.md  schemas.py
tests/: test_architecture_application.py  test_architecture_config.py  test_architecture_flow.py  test_architecture_reporting.py  test_architecture_ui.py  test_bootstrap.py  test_checker.py  test_cli.py  test_config.py  test_llm_handoff.py  test_workspace_contract_application.py  test_workspace_contract_domain.py  test_workspace_contract_infrastructure.py  test_workspace_contract_ui.py
tests/features/workspace_contract/rules/: __init__.py
(+382 files in other folders)
