[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-oss"
description = "A pipx-first CLI for architecture-aware collaboration between humans and coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [
    {name = "Tomasz Szpak"},
]
keywords = [
    "agents",
    "architecture",
    "cli",
    "llm",
    "pipx",
    "software-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.8",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/9orky/agentic"
Blog = "https://szpak.dev/"
Documentation = "https://github.com/9orky/agentic/tree/main/docs"
Repository = "https://github.com/9orky/agentic"
Issues = "https://github.com/9orky/agentic/issues"
Changelog = "https://github.com/9orky/agentic/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
agentic = "agentic.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic = [
    "resources/agentic.yaml",
    "resources/copilot-instructions.md",
    "resources/README.md",
    "resources/rules/*.md",
    "resources/rules/**/*.md",
    "resources/arch/extractors/*.py",
    "resources/arch/extractors/*.js",
    "resources/arch/extractors/*.php",
]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"
version_file = "src/agentic/_version.py"
